bugfix: scrollbar width bugfix

--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -139,8 +139,11 @@
 }
 
 // FEATURE-CARD
+
 .feature-card {
 	padding:20px;
+	width: 90%;
+	margin: auto;
 	h3 {
 		text-transform: uppercase;
 		margin:10px;
