--- a/src/assets/styles/navbar.less
+++ b/src/assets/styles/navbar.less
@@ -11,6 +11,7 @@
       position:absolute;
       width: 0;
       height: 3px;
+      transition: 0.3s ease-in;
       bottom: 0;
       left: 0;
       background-color: @primary
